--- a/solo/index.html
+++ b/solo/index.html
@@ -377,6 +377,8 @@
 
             .top {
                 position: relative;
+                z-index: 1;
+                text-shadow: 0 -2px 1px #000000ff, 0 2px 1px #000000ff, -2px 0 1px #000000ff, 2px 0 1px #000000ff, 0 -3px 1px #00000080, 0 3px 1px #00000080, -3px 0 1px #00000080, 3px 0 1px #00000080;
             }
 
             .right {
@@ -602,6 +604,17 @@
 
         <div id="force-allow-scroll" style="position: absolute; width: 0.100svw; height: 0.100svh; left: 0; top: 0; opacity: 0.01; z-index: -1000;"></div>
 
+        <script id="thumb">
+            try {
+                if (window.location.search.indexOf("thumb") >= 0) {
+                    document.styleSheets[0].insertRule(".option { margin: 2.4ex !important; padding: 1.2ex !important; }", 0)
+                }
+            } catch (error) {
+                console.log("thumb error");
+                console.error(error);
+            }
+        </script>
+
         <script id="switch-fullscreen-on-triple-click">
             let switchFullScreen = function () {
                 try {
@@ -718,7 +731,7 @@
                 </div>
             </div>
         </div>
-        <div style="position: absolute; left: 0%; top: 0%; width: 60%; height: 60%; left: 0vw; top: 0vh; width: 60vw; height: 60vh; left: 0dvw; top: 0dvh; width: 60dvw; height: 60dvh;">
+        <div style="position: absolute; left: 0%; top: 0%; width: 60%; height: 60%; left: 0vw; top: 0vh; width: 60vw; height: 60vh; left: 0dvw; top: 0dvh; width: 60dvw; height: 60dvh; display: none;">
             <div class="outer">
                 <div class="inner overlay unselectable hide-scrollbar" id="overlay" style="border: 2px;">
                 </div>
@@ -860,7 +873,7 @@
 
         <div style="position: absolute; left: 0%; top: 0%; width: 100%; height: 100%; left: 0vw; top: 0vh; width: 100vw; height: 100vh; left: 0dvw; top: 0dvh; width: 100dvw; height: 100dvh;">
             <div class="outer" >
-                <div class="inner map unselectable" id="map-big" style="border: #111111 solid 0px">
+                <div class="inner map unselectable" id="map-big" style="border: #111111 solid 0px; z-index: 2;">
                 </div>
             </div>
         </div>
