--- a/solo/index.html
+++ b/solo/index.html
@@ -65,6 +65,10 @@
                 display: none;
             }
 
+            .full-height {
+                height: 100%;
+            }
+
             @font-face {
                 font-family: "Bohemian Typewriter";
                 src:
@@ -450,7 +454,8 @@
                 background-size: cover;
                 background-position: center;
                 background-repeat: no-repeat;
-                background-image: url(info/spellbook.png);
+                background-image:
+                    url("webp/info/spellbook.webp");
                 border-spacing: 0;
                 color: #020202;
                 font-weight: bold;
@@ -469,7 +474,8 @@
                 background-size: cover;
                 background-position: center;
                 background-repeat: no-repeat;
-                background-image: url(info/requirement.png);
+                background-image:
+                    url("webp/info/requirement.webp");
                 border-spacing: 0;
                 color: #020202;
                 font-weight: bold;
@@ -482,13 +488,14 @@
                 overflow: hidden;
             }
 
-            .loyaltycard-table {
+            .loyalty-card-table {
                 background-color: #22222280;
                 background-size: 100%;
                 background-size: cover;
                 background-position: center;
                 background-repeat: no-repeat;
-                background-image: url(info/loyaltycard.png);
+                background-image:
+                    url("webp/info/loyalty-card.webp");
                 border-spacing: 0;
                 color: #020202;
                 font-weight: bold;
@@ -502,7 +509,8 @@
             }
 
             .border-outer {
-                border-image-source: url(info/faction-board-unique-ability-border.png);
+                border-image-source:
+                    url("webp/info/faction-board-unique-ability-border.webp");
                 border-image-slice: 70;
                 border-style: solid;
                 border-width: 2.8ex;
@@ -598,7 +606,8 @@
             }
 
             .separator {
-                background-image: url(info/units-separator.png);
+                background-image:
+                    url(webp/info/units-separator.webp);
                 background-position: bottom;
                 background-repeat: no-repeat;
                 background-size: 100% 0.22ex;
@@ -698,90 +707,157 @@
             };
         </script>
 
-        <img class="asset" id="earth33" src="images/earth33-dark.png" />
-        <img class="asset" id="earth33-place" src="images/earth33-place.png" />
+        <img class="asset" id="earth33" src="webp/images/earth33-dark.webp" />
+        <img class="asset" id="earth33-place" src="webp/images/earth33-place.webp" />
 
-        <img class="asset" id="earth35" src="images/earth35-dark.png" />
-        <img class="asset" id="earth35-place" src="images/earth35-place.png" />
+        <img class="asset" id="earth35" src="webp/images/earth35-dark.webp" />
+        <img class="asset" id="earth35-place" src="webp/images/earth35-place.webp" />
 
-        <img class="asset" id="earth53" src="images/earth53-dark.png" />
-        <img class="asset" id="earth53-place" src="images/earth53-place.png" />
+        <img class="asset" id="earth53" src="webp/images/earth53-dark.webp" />
+        <img class="asset" id="earth53-place" src="webp/images/earth53-place.webp" />
 
-        <img class="asset" id="earth55" src="images/earth55-dark.png" />
-        <img class="asset" id="earth55-place" src="images/earth55-place.png" />
+        <img class="asset" id="earth55" src="webp/images/earth55-dark.webp" />
+        <img class="asset" id="earth55-place" src="webp/images/earth55-place.webp" />
 
-        <img class="asset" id="gate" src="images/gate.png" />
-        <img class="asset" id="kill" src="images/kill.png" />
-        <img class="asset" id="pain" src="images/pain.png" />
+        <img class="asset" id="gate" src="webp/images/gate.webp" />
+        <img class="asset" id="kill" src="webp/images/kill.webp" />
+        <img class="asset" id="pain" src="webp/images/pain.webp" />
 
-        <img class="asset" id="bg-glyph"          src="images/bg-glyph.png" />
-        <img class="asset" id="bg-acolyte"        src="images/bg-acolyte.png" />
-        <img class="asset" id="bg-ghoul"          src="images/bg-ghoul.png" />
-        <img class="asset" id="bg-fungi"          src="images/bg-fungi.png" />
-        <img class="asset" id="bg-dark-young"     src="images/bg-dark-young.png" />
-        <img class="asset" id="bg-shub"           src="images/bg-shub.png" />
+        <img class="asset" id="bg-glyph"          src="webp/images/bg-glyph.webp" />
+        <img class="asset" id="bg-acolyte"        src="webp/images/bg-acolyte.webp" />
+        <img class="asset" id="bg-ghoul"          src="webp/images/bg-ghoul.webp" />
+        <img class="asset" id="bg-fungi"          src="webp/images/bg-fungi.webp" />
+        <img class="asset" id="bg-dark-young"     src="webp/images/bg-dark-young.webp" />
+        <img class="asset" id="bg-shub"           src="webp/images/bg-shub.webp" />
 
-        <img class="asset" id="cc-glyph"          src="images/cc-glyph.png" />
-        <img class="asset" id="cc-acolyte"        src="images/cc-acolyte.png" />
-        <img class="asset" id="cc-nightgaunt"     src="images/cc-nightgaunt.png" />
-        <img class="asset" id="cc-flying-polyp"   src="images/cc-flying-polyp.png" />
-        <img class="asset" id="cc-hunting-horror" src="images/cc-hunting-horror.png" />
-        <img class="asset" id="cc-nyarly"         src="images/cc-nyarly.png" />
+        <img class="asset" id="cc-glyph"          src="webp/images/cc-glyph.webp" />
+        <img class="asset" id="cc-acolyte"        src="webp/images/cc-acolyte.webp" />
+        <img class="asset" id="cc-nightgaunt"     src="webp/images/cc-nightgaunt.webp" />
+        <img class="asset" id="cc-flying-polyp"   src="webp/images/cc-flying-polyp.webp" />
+        <img class="asset" id="cc-hunting-horror" src="webp/images/cc-hunting-horror.webp" />
+        <img class="asset" id="cc-nyarly"         src="webp/images/cc-nyarly.webp" />
 
-        <img class="asset" id="gc-glyph"          src="images/gc-glyph.png" />
-        <img class="asset" id="gc-acolyte"        src="images/gc-acolyte.png" />
-        <img class="asset" id="gc-deep-one"       src="images/gc-deep-one.png" />
-        <img class="asset" id="gc-shoggoth"       src="images/gc-shoggoth.png" />
-        <img class="asset" id="gc-starspawn"      src="images/gc-starspawn.png" />
-        <img class="asset" id="gc-cthulhu"        src="images/gc-cthulhu.png" />
+        <img class="asset" id="gc-glyph"          src="webp/images/gc-glyph.webp" />
+        <img class="asset" id="gc-acolyte"        src="webp/images/gc-acolyte.webp" />
+        <img class="asset" id="gc-deep-one"       src="webp/images/gc-deep-one.webp" />
+        <img class="asset" id="gc-shoggoth"       src="webp/images/gc-shoggoth.webp" />
+        <img class="asset" id="gc-starspawn"      src="webp/images/gc-starspawn.webp" />
+        <img class="asset" id="gc-cthulhu"        src="webp/images/gc-cthulhu.webp" />
 
-        <img class="asset" id="ys-glyph"          src="images/ys-glyph.png" />
-        <img class="asset" id="ys-acolyte"        src="images/ys-acolyte.png" />
-        <img class="asset" id="ys-undead"         src="images/ys-undead.png" />
-        <img class="asset" id="ys-byakhee"        src="images/ys-byakhee.png" />
-        <img class="asset" id="ys-king-in-yellow" src="images/ys-king-in-yellow.png" />
-        <img class="asset" id="ys-hastur"         src="images/ys-hastur.png" />
-        <img class="asset" id="ys-desecration"    src="images/ys-desecration.png" />
+        <img class="asset" id="ys-glyph"          src="webp/images/ys-glyph.webp" />
+        <img class="asset" id="ys-acolyte"        src="webp/images/ys-acolyte.webp" />
+        <img class="asset" id="ys-undead"         src="webp/images/ys-undead.webp" />
+        <img class="asset" id="ys-byakhee"        src="webp/images/ys-byakhee.webp" />
+        <img class="asset" id="ys-king-in-yellow" src="webp/images/ys-king-in-yellow.webp" />
+        <img class="asset" id="ys-hastur"         src="webp/images/ys-hastur.webp" />
+        <img class="asset" id="ys-desecration"    src="webp/images/ys-desecration.webp" />
 
-        <img class="asset" id="sl-glyph"          src="images/sl-glyph.png" />
-        <img class="asset" id="sl-acolyte"        src="images/sl-acolyte.png" />
-        <img class="asset" id="sl-wizard"         src="images/sl-wizard.png" />
-        <img class="asset" id="sl-serpent-man"    src="images/sl-serpent-man.png" />
-        <img class="asset" id="sl-formless-spawn" src="images/sl-formless-spawn.png" />
-        <img class="asset" id="sl-tsathoggua"     src="images/sl-tsathoggua.png" />
+        <img class="asset" id="sl-glyph"          src="webp/images/sl-glyph.webp" />
+        <img class="asset" id="sl-acolyte"        src="webp/images/sl-acolyte.webp" />
+        <img class="asset" id="sl-wizard"         src="webp/images/sl-wizard.webp" />
+        <img class="asset" id="sl-serpent-man"    src="webp/images/sl-serpent-man.webp" />
+        <img class="asset" id="sl-formless-spawn" src="webp/images/sl-formless-spawn.webp" />
+        <img class="asset" id="sl-tsathoggua"     src="webp/images/sl-tsathoggua.webp" />
 
-        <img class="asset" id="ww-glyph"          src="images/ww-glyph.png" />
-        <img class="asset" id="ww-acolyte"        src="images/ww-acolyte.png" />
-        <img class="asset" id="ww-wendigo"        src="images/ww-wendigo.png" />
-        <img class="asset" id="ww-gnoph-keh"      src="images/ww-gnoph-keh.png" />
-        <img class="asset" id="ww-rhan-tegoth"    src="images/ww-rhan-tegoth.png" />
-        <img class="asset" id="ww-ithaqua"        src="images/ww-ithaqua.png" />
-        <img class="asset" id="ww-ice-age"        src="images/ww-ice-age.png" />
+        <img class="asset" id="ww-glyph"          src="webp/images/ww-glyph.webp" />
+        <img class="asset" id="ww-acolyte"        src="webp/images/ww-acolyte.webp" />
+        <img class="asset" id="ww-wendigo"        src="webp/images/ww-wendigo.webp" />
+        <img class="asset" id="ww-gnoph-keh"      src="webp/images/ww-gnoph-keh.webp" />
+        <img class="asset" id="ww-rhan-tegoth"    src="webp/images/ww-rhan-tegoth.webp" />
+        <img class="asset" id="ww-ithaqua"        src="webp/images/ww-ithaqua.webp" />
+        <img class="asset" id="ww-ice-age"        src="webp/images/ww-ice-age.webp" />
 
-        <img class="asset" id="ow-glyph"                src="images/ow-glyph.png" />
-        <img class="asset" id="ow-acolyte"              src="images/ow-acolyte.png" />
-        <img class="asset" id="ow-mutant"               src="images/ow-mutant.png" />
-        <img class="asset" id="ow-abomination"          src="images/ow-abomination.png" />
-        <img class="asset" id="ow-spawn-of-yog-sothoth" src="images/ow-spawn-of-yog-sothoth.png" />
-        <img class="asset" id="ow-yog-sothoth"          src="images/ow-yog-sothoth.png" />
+        <img class="asset" id="ow-glyph"                src="webp/images/ow-glyph.webp" />
+        <img class="asset" id="ow-acolyte"              src="webp/images/ow-acolyte.webp" />
+        <img class="asset" id="ow-mutant"               src="webp/images/ow-mutant.webp" />
+        <img class="asset" id="ow-abomination"          src="webp/images/ow-abomination.webp" />
+        <img class="asset" id="ow-spawn-of-yog-sothoth" src="webp/images/ow-spawn-of-yog-sothoth.webp" />
+        <img class="asset" id="ow-yog-sothoth"          src="webp/images/ow-yog-sothoth.webp" />
 
-        <img class="asset" id="an-glyph"          src="images/an-glyph.png" />
-        <img class="asset" id="an-acolyte"        src="images/an-acolyte.png" />
-        <img class="asset" id="an-un-man"         src="images/an-un-man.png" />
-        <img class="asset" id="an-reanimated"     src="images/an-reanimated.png" />
-        <img class="asset" id="an-yothan"         src="images/an-yothan.png" />
-        <img class="asset" id="an-cathedral"      src="images/an-cathedral.png" />
+        <img class="asset" id="an-glyph"          src="webp/images/an-glyph.webp" />
+        <img class="asset" id="an-acolyte"        src="webp/images/an-acolyte.webp" />
+        <img class="asset" id="an-un-man"         src="webp/images/an-un-man.webp" />
+        <img class="asset" id="an-reanimated"     src="webp/images/an-reanimated.webp" />
+        <img class="asset" id="an-yothan"         src="webp/images/an-yothan.webp" />
+        <img class="asset" id="an-cathedral"      src="webp/images/an-cathedral.webp" />
 
-        <img class="asset" id="n-ghast"           src="images/n-ghast.png" />
-        <img class="asset" id="n-gug"             src="images/n-gug.png" />
-        <img class="asset" id="n-shantak"         src="images/n-shantak.png" />
-        <img class="asset" id="n-star-vampire"    src="images/n-star-vampire.png" />
+        <img class="asset" id="n-ghast"           src="webp/images/n-ghast.webp" />
+        <img class="asset" id="n-gug"             src="webp/images/n-gug.webp" />
+        <img class="asset" id="n-shantak"         src="webp/images/n-shantak.webp" />
+        <img class="asset" id="n-star-vampire"    src="webp/images/n-star-vampire.webp" />
         
-        <img class="asset" id="ghast-icon"        src="info/n-ghast.svg" />
-        <img class="asset" id="gug-icon"          src="info/n-gug.svg" />
-        <img class="asset" id="shantak-icon"      src="info/n-shantak.svg" />
-        <img class="asset" id="star-vampire-icon" src="info/n-star-vampire.svg" />
+        <img class="asset" id="ghast-icon"        src="webp/info/n-ghast.svg" />
+        <img class="asset" id="gug-icon"          src="webp/info/n-gug.svg" />
+        <img class="asset" id="shantak-icon"      src="webp/info/n-shantak.svg" />
+        <img class="asset" id="star-vampire-icon" src="webp/info/n-star-vampire.svg" />
 
+        <img class="asset" id="question-mark" src="webp/info/question-mark.webp" />
+
+        <img class="asset" id="sign-aa" src="webp/info/sign-aa.webp" />
+        <img class="asset" id="sign-oo" src="webp/info/sign-oo.webp" />
+        <img class="asset" id="sign-ww" src="webp/info/sign-ww.webp" />
+
+        <img class="asset" id="info:an-acolyte" src="webp/info/an-acolyte.svg" />
+        <img class="asset" id="info:an-background" src="webp/info/an-background.webp" />
+        <img class="asset" id="info:an-cathedral" src="webp/info/an-cathedral.svg" />
+        <img class="asset" id="info:an-reanimated" src="webp/info/an-reanimated.svg" />
+        <img class="asset" id="info:an-un-man" src="webp/info/an-un-man.svg" />
+        <img class="asset" id="info:an-yothan" src="webp/info/an-yothan.svg" />
+
+        <img class="asset" id="info:bg-acolyte" src="webp/info/bg-acolyte.svg" />
+        <img class="asset" id="info:bg-background" src="webp/info/bg-background.webp" />
+        <img class="asset" id="info:bg-dark-young" src="webp/info/bg-dark-young.svg" />
+        <img class="asset" id="info:bg-fungi-from-yuggoth" src="webp/info/bg-fungi-from-yuggoth.svg" />
+        <img class="asset" id="info:bg-ghoul" src="webp/info/bg-ghoul.svg" />
+        <img class="asset" id="info:bg-shub-niggurath" src="webp/info/bg-shub-niggurath.svg" />
+
+        <img class="asset" id="info:cc-acolyte" src="webp/info/cc-acolyte.svg" />
+        <img class="asset" id="info:cc-background" src="webp/info/cc-background.webp" />
+        <img class="asset" id="info:cc-flying-polyp" src="webp/info/cc-flying-polyp.svg" />
+        <img class="asset" id="info:cc-hunting-horror" src="webp/info/cc-hunting-horror.svg" />
+        <img class="asset" id="info:cc-nightgaunt" src="webp/info/cc-nightgaunt.svg" />
+        <img class="asset" id="info:cc-nyarlathotep" src="webp/info/cc-nyarlathotep.svg" />
+
+        <img class="asset" id="info:gc-acolyte" src="webp/info/gc-acolyte.svg" />
+        <img class="asset" id="info:gc-background" src="webp/info/gc-background.webp" />
+        <img class="asset" id="info:gc-cthulhu" src="webp/info/gc-cthulhu.svg" />
+        <img class="asset" id="info:gc-deep-one" src="webp/info/gc-deep-one.svg" />
+        <img class="asset" id="info:gc-shoggoth" src="webp/info/gc-shoggoth.svg" />
+        <img class="asset" id="info:gc-starspawn" src="webp/info/gc-starspawn.svg" />
+
+        <img class="asset" id="info:ow-abomination" src="webp/info/ow-abomination.svg" />
+        <img class="asset" id="info:ow-acolyte" src="webp/info/ow-acolyte.svg" />
+        <img class="asset" id="info:ow-background" src="webp/info/ow-background.webp" />
+        <img class="asset" id="info:ow-mutant" src="webp/info/ow-mutant.svg" />
+        <img class="asset" id="info:ow-sothoth" src="webp/info/ow-sothoth.svg" />
+        <img class="asset" id="info:ow-spawn-of-yog-sothoth" src="webp/info/ow-spawn-of-yog-sothoth.svg" />
+        <img class="asset" id="info:ow-yog-sothoth" src="webp/info/ow-yog-sothoth.svg" />
+
+        <img class="asset" id="info:sl-acolyte" src="webp/info/sl-acolyte.svg" />
+        <img class="asset" id="info:sl-background" src="webp/info/sl-background.webp" />
+        <img class="asset" id="info:sl-formless-spawn" src="webp/info/sl-formless-spawn.svg" />
+        <img class="asset" id="info:sl-serpent-man" src="webp/info/sl-serpent-man.svg" />
+        <img class="asset" id="info:sl-tsathoggua" src="webp/info/sl-tsathoggua.svg" />
+        <img class="asset" id="info:sl-wizard" src="webp/info/sl-wizard.svg" />
+
+        <img class="asset" id="info:ww-acolyte" src="webp/info/ww-acolyte.svg" />
+        <img class="asset" id="info:ww-background" src="webp/info/ww-background.webp" />
+        <img class="asset" id="info:ww-gnoph-keh" src="webp/info/ww-gnoph-keh.svg" />
+        <img class="asset" id="info:ww-ithaqua" src="webp/info/ww-ithaqua.svg" />
+        <img class="asset" id="info:ww-rhan-tegoth" src="webp/info/ww-rhan-tegoth.svg" />
+        <img class="asset" id="info:ww-wendigo" src="webp/info/ww-wendigo.svg" />
+
+        <img class="asset" id="info:ys-acolyte" src="webp/info/ys-acolyte.svg" />
+        <img class="asset" id="info:ys-background" src="webp/info/ys-background.webp" />
+        <img class="asset" id="info:ys-byakhee" src="webp/info/ys-byakhee.svg" />
+        <img class="asset" id="info:ys-hastur" src="webp/info/ys-hastur.svg" />
+        <img class="asset" id="info:ys-king-in-yellow" src="webp/info/ys-king-in-yellow.svg" />
+        <img class="asset" id="info:ys-undead" src="webp/info/ys-undead.svg" />
+
+        <img class="asset" id="info:n-ghast" src="webp/info/n-ghast.svg" />
+        <img class="asset" id="info:n-gug" src="webp/info/n-gug.svg" />
+        <img class="asset" id="info:n-shantak" src="webp/info/n-shantak.svg" />
+        <img class="asset" id="info:n-star-vampire" src="webp/info/n-star-vampire.svg" />
 
         <div style="position: absolute; left: 0%; top: 0%; width: 60%; height: 60%; left: 0vw; top: 0vh; width: 60vw; height: 60vh; left: 0dvw; top: 0dvh; width: 60dvw; height: 60dvh;">
             <div class="outer">
@@ -936,9 +1012,15 @@
             </div>
         </div>
 
-        <div id="replay"></div>
+        <!-- { | REPLAY | { -->
+        <div id="replay" style="display: none" ></div>
+        <!-- } | REPLAY | } -->
 
+        <!-- { | ASSETS | { -->
+        <!-- } | ASSETS | } -->
 
+        <!-- { | SCRIPT | { -->
         <script id="script" type="text/javascript" src="./target/scala-2.13/cthulhu-wars-solo-hrf-fastopt.js"></script>
+        <!-- } | SCRIPT | } -->
     </body>
 </html>
