--- a/solo/index.html
+++ b/solo/index.html
@@ -902,6 +902,12 @@
                 </div>
             </div>
         </div>
+        <div style="position: absolute; left: 0%; top: 60%; width: 40%; height: 40%; left: 0vw; top: 60vh; width: 40vw; height: 40vh; left: 0dvw; top: 60dvh; width: 40dvw; height: 40dvh; display: none;">
+            <div class="outer">
+                <div class="inner action unselectable" id="undo">
+                </div>
+            </div>
+        </div>
         <div style="position: absolute; left: 40%; top: 60%; width: 30%; height: 40%; left: 40vw; top: 60vh; width: 30vw; height: 40vh; left: 40dvw; top: 60dvh; width: 30dvw; height: 40dvh;">
             <div class="outer">
                 <div class="inner map" id="map-west">
@@ -922,7 +928,7 @@
             </div>
         </div>
 
-        <div style="position: absolute; left: 80%; top: 60%; width: 20%; height: 30%; left: 80vw; top: 60vh; width: 20vw; height: 30vh;  left: 80dvw; top: 60dvh; width: 20dvw; height: 30dvh; display: none">
+        <div style="position: absolute; left: 80%; top: 60%; width: 20%; height: 30%; left: 80vw; top: 60vh; width: 20vw; height: 30vh;  left: 80dvw; top: 60dvh; width: 20dvw; height: 30dvh; display: none;">
             <div class="outer" >
                 <div class="inner status unselectable" id="status-5">
                 </div>
