--- a/solo/index.html
+++ b/solo/index.html
@@ -725,6 +725,7 @@
 
         <img class="asset" id="bg-glyph"          src="webp/images/bg-glyph.webp" />
         <img class="asset" id="bg-acolyte"        src="webp/images/bg-acolyte.webp" />
+        <img class="asset" id="bg-high-priest"    src="webp/images/bg-high-priest.webp" />
         <img class="asset" id="bg-ghoul"          src="webp/images/bg-ghoul.webp" />
         <img class="asset" id="bg-fungi"          src="webp/images/bg-fungi.webp" />
         <img class="asset" id="bg-dark-young"     src="webp/images/bg-dark-young.webp" />
@@ -732,6 +733,7 @@
 
         <img class="asset" id="cc-glyph"          src="webp/images/cc-glyph.webp" />
         <img class="asset" id="cc-acolyte"        src="webp/images/cc-acolyte.webp" />
+        <img class="asset" id="cc-high-priest"    src="webp/images/cc-high-priest.webp" />
         <img class="asset" id="cc-nightgaunt"     src="webp/images/cc-nightgaunt.webp" />
         <img class="asset" id="cc-flying-polyp"   src="webp/images/cc-flying-polyp.webp" />
         <img class="asset" id="cc-hunting-horror" src="webp/images/cc-hunting-horror.webp" />
@@ -739,6 +741,7 @@
 
         <img class="asset" id="gc-glyph"          src="webp/images/gc-glyph.webp" />
         <img class="asset" id="gc-acolyte"        src="webp/images/gc-acolyte.webp" />
+        <img class="asset" id="gc-high-priest"    src="webp/images/gc-high-priest.webp" />
         <img class="asset" id="gc-deep-one"       src="webp/images/gc-deep-one.webp" />
         <img class="asset" id="gc-shoggoth"       src="webp/images/gc-shoggoth.webp" />
         <img class="asset" id="gc-starspawn"      src="webp/images/gc-starspawn.webp" />
@@ -746,6 +749,7 @@
 
         <img class="asset" id="ys-glyph"          src="webp/images/ys-glyph.webp" />
         <img class="asset" id="ys-acolyte"        src="webp/images/ys-acolyte.webp" />
+        <img class="asset" id="ys-high-priest"    src="webp/images/ys-high-priest.webp" />
         <img class="asset" id="ys-undead"         src="webp/images/ys-undead.webp" />
         <img class="asset" id="ys-byakhee"        src="webp/images/ys-byakhee.webp" />
         <img class="asset" id="ys-king-in-yellow" src="webp/images/ys-king-in-yellow.webp" />
@@ -754,6 +758,7 @@
 
         <img class="asset" id="sl-glyph"          src="webp/images/sl-glyph.webp" />
         <img class="asset" id="sl-acolyte"        src="webp/images/sl-acolyte.webp" />
+        <img class="asset" id="sl-high-priest"    src="webp/images/sl-high-priest.webp" />
         <img class="asset" id="sl-wizard"         src="webp/images/sl-wizard.webp" />
         <img class="asset" id="sl-serpent-man"    src="webp/images/sl-serpent-man.webp" />
         <img class="asset" id="sl-formless-spawn" src="webp/images/sl-formless-spawn.webp" />
@@ -761,6 +766,7 @@
 
         <img class="asset" id="ww-glyph"          src="webp/images/ww-glyph.webp" />
         <img class="asset" id="ww-acolyte"        src="webp/images/ww-acolyte.webp" />
+        <img class="asset" id="ww-high-priest"    src="webp/images/ww-high-priest.webp" />
         <img class="asset" id="ww-wendigo"        src="webp/images/ww-wendigo.webp" />
         <img class="asset" id="ww-gnoph-keh"      src="webp/images/ww-gnoph-keh.webp" />
         <img class="asset" id="ww-rhan-tegoth"    src="webp/images/ww-rhan-tegoth.webp" />
@@ -769,6 +775,7 @@
 
         <img class="asset" id="ow-glyph"                src="webp/images/ow-glyph.webp" />
         <img class="asset" id="ow-acolyte"              src="webp/images/ow-acolyte.webp" />
+        <img class="asset" id="ow-high-priest"          src="webp/images/ow-high-priest.webp" />
         <img class="asset" id="ow-mutant"               src="webp/images/ow-mutant.webp" />
         <img class="asset" id="ow-abomination"          src="webp/images/ow-abomination.webp" />
         <img class="asset" id="ow-spawn-of-yog-sothoth" src="webp/images/ow-spawn-of-yog-sothoth.webp" />
@@ -776,6 +783,7 @@
 
         <img class="asset" id="an-glyph"          src="webp/images/an-glyph.webp" />
         <img class="asset" id="an-acolyte"        src="webp/images/an-acolyte.webp" />
+        <img class="asset" id="an-high-priest"    src="webp/images/an-high-priest.webp" />
         <img class="asset" id="an-un-man"         src="webp/images/an-un-man.webp" />
         <img class="asset" id="an-reanimated"     src="webp/images/an-reanimated.webp" />
         <img class="asset" id="an-yothan"         src="webp/images/an-yothan.webp" />
@@ -790,6 +798,7 @@
         <img class="asset" id="gug-icon"          src="webp/info/n-gug.svg" />
         <img class="asset" id="shantak-icon"      src="webp/info/n-shantak.svg" />
         <img class="asset" id="star-vampire-icon" src="webp/info/n-star-vampire.svg" />
+        <img class="asset" id="high-priest-icon"  src="webp/info/n-high-priest.svg" />
 
         <img class="asset" id="question-mark" src="webp/info/question-mark.webp" />
 
@@ -858,6 +867,7 @@
         <img class="asset" id="info:n-gug" src="webp/info/n-gug.svg" />
         <img class="asset" id="info:n-shantak" src="webp/info/n-shantak.svg" />
         <img class="asset" id="info:n-star-vampire" src="webp/info/n-star-vampire.svg" />
+        <img class="asset" id="info:n-high-priest" src="webp/info/n-high-priest.svg" />
 
         <div style="position: absolute; left: 0%; top: 0%; width: 60%; height: 60%; left: 0vw; top: 0vh; width: 60vw; height: 60vh; left: 0dvw; top: 0dvh; width: 60dvw; height: 60dvh;">
             <div class="outer">
