--- a/solo/index.html
+++ b/solo/index.html
@@ -585,6 +585,10 @@
                 color: #fbf285;
             }
 
+            .dimmed {
+                opacity: 0.4;
+            }
+
             .notes {
                 text-align: left;
                 font-size: 90%;
@@ -793,11 +797,20 @@
         <img class="asset" id="n-gug"             src="webp/images/n-gug.webp" />
         <img class="asset" id="n-shantak"         src="webp/images/n-shantak.webp" />
         <img class="asset" id="n-star-vampire"    src="webp/images/n-star-vampire.webp" />
+        <img class="asset" id="n-filth"           src="webp/images/n-filth.webp" />
+        <img class="asset" id="n-byatis"          src="webp/images/n-byatis.webp" />
+        <img class="asset" id="n-abhoth"          src="webp/images/n-abhoth.webp" />
+        <img class="asset" id="n-daoloth"         src="webp/images/n-daoloth.webp" />
+        <img class="asset" id="n-nyogtha"         src="webp/images/n-nyogtha.webp" />
         
         <img class="asset" id="ghast-icon"        src="webp/info/n-ghast.svg" />
         <img class="asset" id="gug-icon"          src="webp/info/n-gug.svg" />
         <img class="asset" id="shantak-icon"      src="webp/info/n-shantak.svg" />
         <img class="asset" id="star-vampire-icon" src="webp/info/n-star-vampire.svg" />
+        <img class="asset" id="byatis-icon"       src="webp/info/n-byatis.svg" />
+        <img class="asset" id="abhoth-icon"       src="webp/info/n-abhoth.svg" />
+        <img class="asset" id="daoloth-icon"      src="webp/info/n-daoloth.svg" />
+        <img class="asset" id="nyogtha-icon"      src="webp/info/n-nyogtha.svg" />
         <img class="asset" id="high-priest-icon"  src="webp/info/n-high-priest.svg" />
 
         <img class="asset" id="question-mark" src="webp/info/question-mark.webp" />
@@ -867,6 +880,10 @@
         <img class="asset" id="info:n-gug" src="webp/info/n-gug.svg" />
         <img class="asset" id="info:n-shantak" src="webp/info/n-shantak.svg" />
         <img class="asset" id="info:n-star-vampire" src="webp/info/n-star-vampire.svg" />
+        <img class="asset" id="info:n-byatis" src="webp/info/n-byatis.svg" />
+        <img class="asset" id="info:n-abhoth" src="webp/info/n-abhoth.svg" />
+        <img class="asset" id="info:n-daoloth" src="webp/info/n-daoloth.svg" />
+        <img class="asset" id="info:n-nyogtha" src="webp/info/n-nyogtha.svg" />
         <img class="asset" id="info:n-high-priest" src="webp/info/n-high-priest.svg" />
 
         <div style="position: absolute; left: 0%; top: 0%; width: 60%; height: 60%; left: 0vw; top: 0vh; width: 60vw; height: 60vh; left: 0dvw; top: 0dvh; width: 60dvw; height: 60dvh;">
