async out of turn actions

--- a/solo/index.html
+++ b/solo/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-        <base href="hrf/" /> <!-- Need this for online mode to work -->
+        <base href="/hrf/" /> <!-- Need this for online mode to work -->
         <!-- <base href="" /> --> <!-- Temp for test (comment out before deploying) -->
         <title id="cws-options" data-server="###SERVER-URL###" data-delay="1" data-menu="222" data-scroll="true" data-online="true">Cthulhu Wars Solo DEV</title>
         <style>
