--- a/solo/index.html
+++ b/solo/index.html
@@ -642,6 +642,14 @@
                 cursor: help;
             }
 
+            .direction {
+                position: absolute;
+                margin-right: 1ex;
+                margin-left: 1ex;
+                height: 2.2ex;
+                width: 2.2ex;
+            }
+
             .sbdiv {
                 padding-right: 1.6ex;
                 padding-left: 1.6ex;
@@ -814,6 +822,31 @@
         <img class="asset" id="high-priest-icon"  src="webp/info/n-high-priest.svg" />
 
         <img class="asset" id="question-mark" src="webp/info/question-mark.webp" />
+
+        <img class="asset" id="move-deg-0"   src="webp/icons/move-deg-0.webp" />
+        <img class="asset" id="move-deg-15"  src="webp/icons/move-deg-15.webp" />
+        <img class="asset" id="move-deg-30"  src="webp/icons/move-deg-30.webp" />
+        <img class="asset" id="move-deg-45"  src="webp/icons/move-deg-45.webp" />
+        <img class="asset" id="move-deg-60"  src="webp/icons/move-deg-60.webp" />
+        <img class="asset" id="move-deg-75"  src="webp/icons/move-deg-75.webp" />
+        <img class="asset" id="move-deg-90"  src="webp/icons/move-deg-90.webp" />
+        <img class="asset" id="move-deg-105" src="webp/icons/move-deg-105.webp" />
+        <img class="asset" id="move-deg-120" src="webp/icons/move-deg-120.webp" />
+        <img class="asset" id="move-deg-135" src="webp/icons/move-deg-135.webp" />
+        <img class="asset" id="move-deg-150" src="webp/icons/move-deg-150.webp" />
+        <img class="asset" id="move-deg-165" src="webp/icons/move-deg-165.webp" />
+        <img class="asset" id="move-deg-180" src="webp/icons/move-deg-180.webp" />
+        <img class="asset" id="move-deg-195" src="webp/icons/move-deg-195.webp" />
+        <img class="asset" id="move-deg-210" src="webp/icons/move-deg-210.webp" />
+        <img class="asset" id="move-deg-225" src="webp/icons/move-deg-225.webp" />
+        <img class="asset" id="move-deg-240" src="webp/icons/move-deg-240.webp" />
+        <img class="asset" id="move-deg-255" src="webp/icons/move-deg-255.webp" />
+        <img class="asset" id="move-deg-270" src="webp/icons/move-deg-270.webp" />
+        <img class="asset" id="move-deg-285" src="webp/icons/move-deg-285.webp" />
+        <img class="asset" id="move-deg-300" src="webp/icons/move-deg-300.webp" />
+        <img class="asset" id="move-deg-315" src="webp/icons/move-deg-315.webp" />
+        <img class="asset" id="move-deg-330" src="webp/icons/move-deg-330.webp" />
+        <img class="asset" id="move-deg-345" src="webp/icons/move-deg-345.webp" />
 
         <img class="asset" id="sign-aa" src="webp/info/sign-aa.webp" />
         <img class="asset" id="sign-oo" src="webp/info/sign-oo.webp" />
